--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chat</title>
+  <link rel="stylesheet" href="./src/styles/modalWindow.sass">
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    dlfs;dlfsldfl'sldfl'd;
+  </div>
+  <div>sdvcsdvsosldvksdkvodslkv</div>
 </body>
 <script type="module" src="./index.js"></script>
 
