--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link rel="stylesheet" href="./login.sass">
+  <link rel="stylesheet" href="../../styles/main.sass">
 </head>
+
 <body>
   <div class="root">
     <div class="login__wrapper">
@@ -18,21 +21,11 @@
           <label class="form-label" for="login">
             Логин
           </label>
-          <input 
-            name="login" 
-            class="input " 
-            type="text"
-            placeholder="Логин"
-          >
+          <input name="login" class="input " type="text" placeholder="Логин">
           <label class="form-label" for="password">
             Пароль
           </label>
-          <input 
-            name="password" 
-            class="input " 
-            type="password"
-            placeholder="Пароль"
-          >
+          <input name="password" class="input " type="password" placeholder="Пароль">
           <div class="form-warning form-warning_pt-3rem" id="login__form-warning">
             <p class="form-warning-text">Неверный логин или пароль</p>
           </div>
@@ -44,7 +37,7 @@
       </main>
     </div>
   </div>
-<script type="module"  src="./index.js"></script>
-    
+
 </body>
+
 </html>
