solving problem with hash files name(in process)

--- a/src/pages/chats/index.html
+++ b/src/pages/chats/index.html
@@ -5,16 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chat</title>
-  <link rel="stylesheet" href="./src/styles/modalWindow.sass">
-  <link rel="stylesheet" href="./src/pages/chats/chats.sass">
+  <link rel="stylesheet" href="../../styles/main.sass">
+  <link rel="stylesheet" href="./chats.sass">
 </head>
 
 <body>
   <div id="root">
-    dlfs;dlfsldfl'sldfl'd;
+    <img src="./Chat-picture.svg" alt="">
   </div>
   <div>sdvcsdvsosldvksdkvodslkv</div>
 </body>
+
+
+
 <script type="module" src="./index.js"></script>
 
 </html>
