--- a/src/pages/chats/index.html
+++ b/src/pages/chats/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chat</title>
-  <link rel="stylesheet" href="../../styles/main.sass">
-  <link rel="stylesheet" href="./chats.sass">
+  <title>Chats</title>
+  <link type="text/css" rel="stylesheet" href="../../styles/main.sass">
+  <link type="text/css" rel="stylesheet" href="./chats.sass">
 </head>
 
 <body>
