html & css done, but wrong with hbs partials, I use {{{}}}

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,11 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Login</title>
+  <link type="text/css" rel="stylesheet" href="./login.sass">
+  <link type="text/css" rel="stylesheet" href="../styles/main.sass">
 </head>
 
 <body>
-  <a href="./login/index.html">Kjuby</a>
+  <div class="root" id="root">
+
+  </div>
+  <script type="module" src="./login.js"></script>
 </body>
 
 </html>
