--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -6,17 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link type="text/css" rel="stylesheet" href="../styles/main.sass">
+  <link type="text/css" rel="stylesheet" href="./login.sass">
+  <link type="text/css" rel="stylesheet" href="../../styles/main.sass">
 </head>
 
 <body>
   <div class="root" id="root">
-    <a href="./login/index.html">
-      <h1>
-        To Login
-      </h1>
-    </a>
+
   </div>
+  <script type="module" src="./login.js"></script>
 </body>
 
 </html>
