--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,6 +16,11 @@
         To Login
       </h1>
     </a>
+    <a href="./test-page-for-dev/test.html">
+      <h1>
+        To TEST PAge
+      </h1>
+    </a>
   </div>
 </body>
 
