--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -14,7 +14,7 @@
   <div class="root" id="root">
 
   </div>
-  <script type="module" src="./login.js"></script>
+  <script type="module" src="./login.ts"></script>
 </body>
 
 </html>
