--- a/src/pages/test-page-for-dev/test.html
+++ b/src/pages/test-page-for-dev/test.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chats</title>
+  <title>!!!!TEST Page!!!!</title>
   <link type="text/css" rel="stylesheet" href="../../styles/main.sass">
-  <link type="text/css" rel="stylesheet" href="./chats.sass">
+  <link type="text/css" rel="stylesheet" href="./test.sass">
 </head>
 
 <body>
@@ -16,6 +16,6 @@
 
 
 
-<script type="module" src="./chats.ts"></script>
+<script type="module" src="./test.ts"></script>
 
 </html>
