messages hbs, next profile

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,9 +16,9 @@
         To Login
       </h1>
     </a>
-    <a href="./test-page-for-dev/test.html">
+    <a href="./messages/messages.html">
       <h1>
-        To TEST PAge
+        To Messages
       </h1>
     </a>
   </div>
