--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,6 +21,16 @@
         To Messages
       </h1>
     </a>
+    <a href="./testComponent/test.html">
+      <h1>
+        To TEST
+      </h1>
+    </a>
+    <a href="./profile/profile.html">
+      <h1>
+        To profile
+      </h1>
+    </a>
   </div>
 </body>
 
