validator, login, register done

--- a/src/pages/registration/registration.html
+++ b/src/pages/registration/registration.html
@@ -15,7 +15,7 @@
   <div class="root" id="root">
 
   </div>
-  <script type="module" src="./registration.ts"></script>
+  <script type="module" src="./registration.index.ts"></script>
 </body>
 
 </html>
