--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -14,7 +14,7 @@
   <div class="root" id="root">
 
   </div>
-  <script type="module" src="./profile.ts"></script>
+  <script type="module" src="./profile.index.ts"></script>
 </body>
 
 </html>
