--- a/src/pages/error-page/500.html
+++ b/src/pages/error-page/500.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./error-page.sass">
-  <link rel="stylesheet" href="../../styles/main.sass">
+  <link rel="stylesheet" href="./error-page.scss">
+  <link rel="stylesheet" href="../../styles/main.scss">
 </head>
 
 <body>
