--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link type="text/css" rel="stylesheet" href="./login.sass">
-  <link type="text/css" rel="stylesheet" href="../../styles/main.sass">
+  <link type="text/css" rel="stylesheet" href="./login.scss">
+  <link type="text/css" rel="stylesheet" href="../../styles/main.scss">
 </head>
 
 <body>
