--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link type="text/css" rel="stylesheet" href="./profile.sass">
-  <link type="text/css" rel="stylesheet" href="../../styles/main.sass">
+  <link type="text/css" rel="stylesheet" href="./profile.scss">
+  <link type="text/css" rel="stylesheet" href="../../styles/main.scss">
 </head>
 
 <body>
