--- a/src/pages/registration/registration.html
+++ b/src/pages/registration/registration.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registration</title>
-  <link rel="stylesheet" href="../../styles/main.sass">
-  <link rel="stylesheet" href="./registration.sass">
+  <link rel="stylesheet" href="../../styles/main.scss">
+  <link rel="stylesheet" href="./registration.scss">
 
 </head>
 
