Router in process

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,20 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link type="text/css" rel="stylesheet" href="../styles/main.scss">
+
 </head>
 
 <body>
   <div class="root" id="root">
-    <a href="./login/index.html">
-      <h1>
-        To Login
-      </h1>
-    </a>
-
+    <button id="to-login">
+      To Login
+    </button>
 
 
   </div>
+  <script type="module" src="index.ts"></script>
 </body>
 
 </html>
